Improved Query Execution & Refactored Code