@@ -2,17 +2,14 @@ package com.arib.NotesAppApi.services.implementation;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import com.arib.NotesAppApi.dto.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import com.arib.NotesAppApi.dao.NotesDao;
 import com.arib.NotesAppApi.dao.UserDao;
-import com.arib.NotesAppApi.dto.NotesDTO;
-import com.arib.NotesAppApi.dto.NotesDTOMapper;
-import com.arib.NotesAppApi.dto.ResponseMessage;
 import com.arib.NotesAppApi.entities.Notes;
 import com.arib.NotesAppApi.exception.ResourceNotFoundException;
 import com.arib.NotesAppApi.services.NotesService;
@@ -29,43 +26,48 @@ public class NotesServiceImplementation implements NotesService {
 	
 	@Override
 	public List<NotesDTO> getAllNotes() {
-		List<Notes> allNotes = notesDao.findAll();
-		return allNotes.stream().map(nDTOm::applyReverse).collect(Collectors.toList());
+		return notesDao.findAll().stream().map(nDTOm::applyReverse).toList();
 	}
 
 	@Override
-	public List<NotesDTO> getDeletedNotes(int userID) {
-		doesUserExists(userID);
-		return notesDao.findAllByUser_idAndDeletedTrueOrderByDateUpdatedDesc(userID).stream().map(nDTOm::applyReverse).collect(Collectors.toList());	//nd.getTenNotes(userID)
+	public NotesResponse getSectionNotes(int userId, String section) {
+		doesUserExists(userId);
+		return switch (section) {
+			case "archived" -> {
+				List<NotesDTO> ls = notesDao.findAllByUser_idAndArchivedTrueOrderByDateUpdatedDesc(userId)
+						.stream().map(nDTOm::applyReverse).toList();
+				yield NotesResponse.builder().archived(ls).status(HttpStatus.OK).statusCode(HttpStatus.OK.value()).build();
+			}
+			case "deleted" -> {
+				List<NotesDTO> ls = notesDao.findAllByUser_idAndDeletedTrueOrderByDateUpdatedDesc(userId)
+						.stream().map(nDTOm::applyReverse).toList();
+				yield NotesResponse.builder().deleted(ls).status(HttpStatus.OK).statusCode(HttpStatus.OK.value()).build();
+			}
+			case "dashboard" -> {
+				List<Notes> retrievedNotes = notesDao.findAllByUser_idAndDeletedFalseAndArchivedFalseOrderByDateUpdatedDesc(userId);
+
+				List<NotesDTO> pinnedNotes = retrievedNotes.stream().filter(Notes::isPinned).map(nDTOm::applyReverse).toList();
+				List<NotesDTO> unpinnedNotes = retrievedNotes.stream().filter(Notes::isNotPinned).map(nDTOm::applyReverse).toList();
+
+				yield NotesResponse.builder().pinned(pinnedNotes).unpinned(unpinnedNotes)
+						.status(HttpStatus.OK).statusCode(HttpStatus.OK.value()).build();
+			}
+			default -> throw new IllegalArgumentException("Section not found");
+		};
 	}
 
 	@Override
-	public List<NotesDTO> getPinnedNotes(int userID) {
-		doesUserExists(userID);
-		return notesDao.findAllByUser_idAndPinnedTrueOrderByDateUpdatedDesc(userID).stream().map(nDTOm::applyReverse).collect(Collectors.toList());
-	}
-	
-	@Override
-	public List<NotesDTO> getArchivedNotes(int userID) {
-		doesUserExists(userID);
-		return notesDao.findAllByUser_idAndArchivedTrueOrderByDateUpdatedDesc(userID).stream().map(nDTOm::applyReverse).collect(Collectors.toList());
-	}
-	
-	@Override
-    public List<NotesDTO> searchInDashboard(int userID, String query) {
-		//[TODO] mapper space reject(trim)
-		doesUserExists(userID);
-		return notesDao.searchInDashboard(userID, query, query).stream().map(nDTOm::applyReverse).collect(Collectors.toList());
+	public NotesSearchResponse searchNote(int userID, String query) {
 
-    }
-	
-	@Override
-    public List<Notes> searchInArchived(int userID, String query) {
-		//[TODO] mapper space reject(trim)
 		doesUserExists(userID);
-		return notesDao.searchInArchived(userID, query, query);
+		List<Notes> retrievedNotes = notesDao.searchNote(userID, query);
 
-    }
+		List<NotesDTO> notesFromDashboard = retrievedNotes.stream().filter(Notes::isNotArchived).map(nDTOm::applyReverse).toList();
+		List<NotesDTO> notesFromArchive   = retrievedNotes.stream().filter(Notes::isArchived).map(nDTOm::applyReverse).toList();
+
+		return NotesSearchResponse.builder().archived(notesFromArchive).dashboard(notesFromDashboard)
+				.status(HttpStatus.OK).statusCode(HttpStatus.OK.value()).build();
+	}
 
 	@Override
 	public void deleteNotesFromTrash() {
@@ -97,20 +99,22 @@ public class NotesServiceImplementation implements NotesService {
 	}
 
 	@Override
-	public ResponseEntity<ResponseMessage> addNotes(int userID, NotesDTO note) {
+	public ResponseEntity<NotesResponse> addNotes(int userID, NotesDTO note) {
 		note.asSave();
 		Notes newNote = nDTOm.save(userID, note);
-		notesDao.save(newNote);
-		return ResponseEntity.created(null).body(new ResponseMessage("Note Added successfully!", HttpStatus.CREATED));
-	
+		NotesDTO savedNote = nDTOm.applyReverse(notesDao.save(newNote));
+		return ResponseEntity.created(null)
+				.body(NotesResponse.builder().note(savedNote).message("Note Added successfully!")
+						.status(HttpStatus.CREATED).statusCode(HttpStatus.CREATED.value()).build());
 	}
 	
 	@Override
-	public ResponseEntity<ResponseMessage> updateNote(int noteID, NotesDTO note) {
+	public ResponseEntity<NotesResponse> updateNote(int noteID, NotesDTO note) {
 		doesNoteExists(noteID);
 		Notes newNote = nDTOm.update(noteID, note);
 		notesDao.save(newNote);
-		return ResponseEntity.ok().body(new ResponseMessage("Note Updated successfully!", HttpStatus.OK));
+		return ResponseEntity.ok().body(NotesResponse.builder().message("Note Updated successfully!")
+				.status(HttpStatus.OK).statusCode(HttpStatus.OK.value()).build());
 	}
 
 	private void doesUserExists(int userID) {
@@ -122,6 +126,5 @@ public class NotesServiceImplementation implements NotesService {
 		if (!notesDao.existsById(id))
 			throw new ResourceNotFoundException("No note present with this ID");
 	}
-
 
 }
